# TrainingLoad

./: .gitignore  README.md  background_processor.py  db_schema.sql  logs.sh  maintenance.sh  netlify.toml  package-lock.json  package.json  pyproject.toml  service_manager.py  setup_cron.py  start.sh  stop.sh  tl
.github/: copilot-instructions.md
analysis/: THRESHOLD_CALCULATION_RESEARCH.md
backend/: .env.production.template  .gcloudignore  LOCAL_DEV.md  __init__.py  activities.py  app.yaml  auth.py  config.py  create_sample_data.py  dashboard.py  db.py  deploy.sh  intervals_icu.py  main.py  models.py  onboarding.py  recalculate_utl_with_new_thresholds.py  requirements.txt  research_threshold_calculator.py  setup-scheduler.sh  streams_analysis.py  thresholds.py  training_recommendations.py  update_stream_based_thresholds.py  utils.py  utils_backup.py
docs/: ACWR_Calculation_Explained.md  ACWR_Quick_Reference.md  API_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_SUMMARY.md  CLEANUP_SUMMARY.md  Code-Organization-Cleanup-Summary.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_HISTORY.md  ENHANCED_SCHEDULING.md  Evidence-Based-TRIMP-Scaling.md  PRODUCT_REQUIREMENTS.md  README.md  Stream-Based-Threshold-Integration-Status.md  TODO.md  TRAINING_SCIENCE.md  Training Load Recommendation PRD.md  TrainingLoad_PRD.md  Workspace-Cleanup-Summary.md
frontend/: App.jsx  Dashboard.jsx  ImportingActivities.jsx  OnboardingForm.jsx  index.html  package-lock.json  package.json  vite.config.js
maintenance/: README.md  recalculate_utl.py  recalculate_utl_with_new_thresholds.py  (+1 more)
tests/: README.md  (+12 more)
(+7 files in other folders)
